testing json search feature
Added integer codes for each chief complaint and some json data for aspirin. Pushing to origin to test if the json file request works via HTTP because it doesn't work locally.

--- a/style.css
+++ b/style.css
@@ -7,4 +7,23 @@
 }
 .vtInRw {
     font-size: 25px;
+    align-content:center;
+}
+.container {
+    padding-bottom: 25px;
+}
+.content {
+    border: 2px solid black;
+}
+#searchform {
+    background-color: rgb(223, 223, 223);
+    padding: 25px;
+}
+.searchresults {
+    margin: 10px;
+}
+.footer {
+    background-color: rgb(49, 49, 49);
+    padding: 25px;
+    color: white;
 }
