Search functionality improvements
Established functionality for adding new elements to search result area and fixed the backend search code.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     background-color: rgb(223, 223, 223);
     padding: 25px;
 }
-.searchresults {
+#searchresults {
     margin: 10px;
 }
 .footer {
