Added a lot more data
Added more data to treatments.json and made search factor in vital signs. Not yet factoring in age.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
 .ccselect {
     margin: 25px;
 }
+.result {
+    padding: 10px;
+    border-bottom: 1px solid rgb(130, 130, 130);
+}
+.result:hover {
+    background-color: rgb(223, 223, 223);
+}
 .vtInRw {
     font-size: 25px;
     align-content:center;
